--- a/medcabinet/src/App.css
+++ b/medcabinet/src/App.css
@@ -3,7 +3,7 @@ html,
 body,
 #root {
   width: 100%;
-  height: 100%;
+  height: 105%;
   margin: 0;
   padding: 0;
   text-decoration: none;
@@ -244,6 +244,8 @@ form {
   width: 100%;
   max-width: 600px;
   margin: 0 auto;
+  border-radius: 27px 27px 27px 27px;  padding: 10px;
+  box-shadow: 5px 10px 8px ;
   box-sizing: border-box;
   border: solid black 2px;
   background-image: url("https://t3.ftcdn.net/jpg/03/48/57/08/240_F_348570826_GWIH6P309NvzhO2gArpHfKxXEjPPqcpx.jpg");
